# ComfyUI-Flash-AudioSR

./: .gitignore  README.md  __init__.py  conftest.py  model_loader.py  pyproject.toml  requirements.txt  sampler_node.py  vasr_node.py
docs/plans/: 2026-04-09-flashsr-integration-design.md  2026-04-09-flashsr-integration.md
flashsr/: FLASHSR_API.md  __init__.py
flashsr/TorchJaekwon/Util/: UtilTorch.py
tests/: conftest.py  test_model_loader.py  test_sampler_node.py
versatile_audio_super_resolution/audiosr/: __init__.py  utils.py
versatile_audio_super_resolution/audiosr/latent_diffusion/modules/: attention.py  sage_attention.py
workflows/: AudioSR_example_workflow.json
